--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Тестировка</title>
+        <link rel ='stylesheet' href = 'css/style.css'>
+        <script src = 'js/socket.io.js'></script>
     </head>
     <body>
-        <h1>Всем серваки!!!</h1>
+        <h1>Чат тестировки!</h1>
+        <div id = 'chat'></div>
+        <br>
+        <input id = 'userName' placeholder="Кто ты?">
+        <input id = 'message' placeholder="Сообщение">
+        <button id = 'sendMessage'>Отправить в чат</button>
+        <br>
+        <br>
+        <input id = 'roomName' placeholder="Название комнаты">
+        <button id = 'joinToRoom'>Войти в комнату</button>
+        <button id = 'leaveRoom'>Выйти из комнаты</button>
+        <script src = 'js/main.js'></script>
     </body>
 </html>
