--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <script src = 'js/socket.io.js'></script>
     </head>
     <body>
-        <h1 id = 'chatName'>Общий чатик</h1>
+        <h1>Чат тестировки!</h1>
         <div id = 'chat'></div>
         <br>
         <input id = 'userName' placeholder="Кто ты?">
